--- a/Portfolio.html
+++ b/Portfolio.html
@@ -6,93 +6,112 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Satyam Prashar Portfolio</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer"
+    />
 </head>
 
 <body>
-
     <header>
         <nav id="navbar">
-            <ul>
-                <li><a href="#home" class="nav-link">Home</a></li>
-                <li><a href="#about" class="nav-link">About</a></li>
-                <li><a href="#projects" class="nav-link">Projects</a></li>
-                <li><a href="#contact" class="nav-link">Contact</a></li>
-                <li><a href="resume.pdf" target="_blank">Resume</a></li>
-            </ul>
+            <div class="container">
+                <div class="logo">Satyam Prashar</div>
+                <button id="hamburger" class="hamburger">
+                    <i class="fas fa-bars"></i>
+                </button>
+                <ul class="nav-links" id="navLinks">
+                    <li><a href="#home" class="nav-link">Home</a></li>
+                    <li><a href="#about" class="nav-link">About</a></li>
+                    <li><a href="#projects" class="nav-link">Projects</a></li>
+                    <li><a href="#contact" class="nav-link">Contact</a></li>
+                    <li><a href="resume.pdf" target="_blank">Resume</a></li>
+                </ul>
+            </div>
         </nav>
     </header>
 
     <section id="home">
-        <img src="profile.jpg" alt="Satyam Prashar" class="profile-pic" />
-        <h1>Satyam Prashar</h1>
-        <p>MCA Student | Web Developer | Intern at Unified Mentor</p>
+        <div class="container">
+            <img src="profile.jpg" alt="Satyam Prashar" class="profile-pic" />
+            <h1>Satyam Prashar</h1>
+            <p>MCA Student | Web Developer | Intern at Unified Mentor</p>
+        </div>
     </section>
 
     <section id="about">
-        <h2>About Me</h2>
-        <p>I am currently pursuing my MCA from Noida Institute of Engineering and Technology. I'm passionate about building interactive and responsive web applications.</p>
-        <h3>Education</h3>
-        <ul>
-            <div>(Pursuing), NIET, Greater Noida</div>
-            <div>BCA, B.R.A. Bihar University – 69%</div>
-            <div>12th – R.C.N.D. Inter College, Muzaffarpur – 64%</div>
-            <div>10th – Chandrasheel Vidyapeeth, Muzaffarpur – 7.2 CGPA</div>
-        </ul>
+        <div class="container">
+            <h2>About Me</h2>
+            <p>I am currently pursuing my MCA from Noida Institute of Engineering and Technology. I'm passionate about building interactive and responsive web applications.</p>
 
-        <h3>Internship</h3>
-        <div>Web Development Intern, Unified Mentor Pvt. Ltd. (Feb 2025 – May 2025)</div>
+            <h3>Education</h3>
+            <ul>
+                <li>(Pursuing), NIET, Greater Noida</li>
+                <li>BCA, B.R.A. Bihar University – 69%</li>
+                <li>12th – R.C.N.D. Inter College, Muzaffarpur – 64%</li>
+                <li>10th – Chandrasheel Vidyapeeth, Muzaffarpur – 7.2 CGPA</li>
+            </ul>
 
-        <h3>Skills</h3>
-        <ul>
-            <div>HTML, CSS, JavaScript</div>
-            <div>SQL</div>
-        </ul>
+            <h3>Internship</h3>
+            <div>Web Development Intern, Unified Mentor Pvt. Ltd. (Feb 2025 – May 2025)</div>
 
-        <h3>Certifications</h3>
-        <ul>
-            <div>Introduction to Python – Infosys Springboard</div>
-            <div>Design Thinking – Infosys Springboard</div>
-            <div>Cloud Computing, Software Engineering Fundamentals, Software Development & Testing</div>
-        </ul>
+            <h3>Skills</h3>
+            <ul>
+                <li>HTML, CSS, JavaScript</li>
+                <li>SQL</li>
+            </ul>
+
+            <h3>Certifications</h3>
+            <ul>
+                <li>Introduction to Python – Infosys Springboard</li>
+                <li>Design Thinking – Infosys Springboard</li>
+                <li>Cloud Computing, Software Engineering Fundamentals, Software Development & Testing</li>
+            </ul>
+        </div>
     </section>
 
     <section id="projects">
-        <h2>Projects</h2>
+        <div class="container">
+            <h2>Projects</h2>
+            <div class="projects-grid">
+                <div class="project-card">
+                    <img src="project1.png" alt="Basic Calculator" />
+                    <h3><a href="https://github.com/I-SatyamPrashar/Basic-Calculator" target="_blank">Basic Calculator</a></h3>
+                    <p>A simple web-based calculator built using HTML, CSS, and JavaScript.</p>
+                </div>
 
-        <div class="project-card">
-            <img src="project1.png" alt="Basic Calculator" />
-            <h3><a href="https://github.com/I-SatyamPrashar/Basic-Calculator" target="_blank">Basic Calculator</a></h3>
-            <p>A simple web-based calculator built using HTML, CSS, and JavaScript.</p>
-        </div>
+                <div class="project-card">
+                    <img src="project2.jpg" alt="Memory Card Game" />
+                    <h3><a href="https://github.com/I-SatyamPrashar/Memory-Card-Game" target="_blank">Memory Card Game</a></h3>
+                    <p>A fun memory card matching game to test your memory skills.</p>
+                </div>
 
-        <div class="project-card">
-            <img src="project2.jpg" alt="Memory Card Game" />
-            <h3><a href="https://github.com/I-SatyamPrashar/Memory-Card-Game" target="_blank">Memory Card Game</a></h3>
-            <p>A fun memory card matching game to test your memory skills.</p>
-        </div>
-
-        <div class="project-card">
-            <img src="project3.jpg" alt="Weather App" />
-            <h3><a href="https://github.com/I-SatyamPrashar/Weather-App" target="_blank">Weather App</a></h3>
-            <p>A weather forecasting app that displays current weather using an API.</p>
+                <div class="project-card">
+                    <img src="project3.jpg" alt="Weather App" />
+                    <h3><a href="https://github.com/I-SatyamPrashar/Weather-App" target="_blank">Weather App</a></h3>
+                    <p>A weather forecasting app that displays current weather using an API.</p>
+                </div>
+            </div>
         </div>
     </section>
 
     <section id="contact">
-        <h2>Contact Me</h2>
-        <form id="contact-form">
-            <input type="text" id="name" placeholder="Your Name" required />
-            <input type="email" id="email" placeholder="Your Email" required />
-            <input type="text" id="subject" placeholder="Subject" required />
-            <textarea id="message" placeholder="Your Message" required></textarea>
-            <button type="submit">Send Message</button>
-        </form>
-        <p>📞 7033424824</p>
-        <p>📧 satyamprashar2000@gmail.com</p>
+        <div class="container">
+            <h2>Contact Me</h2>
+            <form id="contact-form">
+                <input type="text" id="name" placeholder="Your Name" required />
+                <input type="email" id="email" placeholder="Your Email" required />
+                <input type="text" id="subject" placeholder="Subject" required />
+                <textarea id="message" placeholder="Your Message" required></textarea>
+                <button type="submit">Send Message</button>
+            </form>
+            <p>📞 7033424824</p>
+            <p>📧 satyamprashar2000@gmail.com</p>
+        </div>
     </section>
 
     <footer>
-        <p>&copy; 2025 Satyam Prashar</p>
+        <div class="container">
+            <p>&copy; 2025 Satyam Prashar</p>
+        </div>
     </footer>
 
     <script src="script.js"></script>
