--- a/Portfolio.html
+++ b/Portfolio.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -19,7 +22,7 @@
                     <i class="fas fa-bars"></i>
                 </button>
                 <ul class="nav-links" id="navLinks">
-                    <li><a href="#home" class="nav-link">Home</a></li>
+                    <li><a href="#home" class="nav-link active">Home</a></li>
                     <li><a href="#about" class="nav-link">About</a></li>
                     <li><a href="#projects" class="nav-link">Projects</a></li>
                     <li><a href="#contact" class="nav-link">Contact</a></li>
@@ -40,24 +43,56 @@
     <section id="about">
         <div class="container">
             <h2>About Me</h2>
-            <p>I am currently pursuing my MCA from Noida Institute of Engineering and Technology. I'm passionate about building interactive and responsive web applications.</p>
+            <p>Driven and enthusiastic MCA student at the Noida Institute of Engineering and Technology, with a strong passion for crafting interactive and user-friendly web applications. My journey into web development has been fueled by a desire to create
+                impactful digital experiences. Through my coursework and an enriching internship at Unified Mentor Pvt. Ltd., I've gained practical experience in web development. I'm eager to leverage my skills and dedication to contribute to innovative
+                projects and continue learning and growing in the ever-evolving web development landscape.</p>
 
             <h3>Education</h3>
             <ul>
-                <li>(Pursuing), NIET, Greater Noida</li>
-                <li>BCA, B.R.A. Bihar University – 69%</li>
-                <li>12th – R.C.N.D. Inter College, Muzaffarpur – 64%</li>
-                <li>10th – Chandrasheel Vidyapeeth, Muzaffarpur – 7.2 CGPA</li>
+                <li>
+                    <strong>Master of Computer Applications (MCA)</strong> (Pursuing)<br> Noida Institute of Engineering and Technology, Greater Noida
+                </li>
+                <li>
+                    <strong>Bachelor of Computer Applications (BCA)</strong> - 69%<br> B.R.A. Bihar University
+                </li>
+                <li>
+                    <strong>12th Grade</strong> - 64%<br> R.C.N.D. Inter College, Muzaffarpur
+                </li>
+                <li>
+                    <strong>10th Grade</strong> - 7.2 CGPA<br> Chandrasheel Vidyapeeth, Muzaffarpur
+                </li>
             </ul>
 
             <h3>Internship</h3>
-            <div>Web Development Intern, Unified Mentor Pvt. Ltd. (Feb 2025 – May 2025)</div>
+            <div>
+                <strong>Web Development Intern</strong> (Feb 2025 – May 2025)<br> Unified Mentor Pvt. Ltd. - Gained practical experience in Web Development.
+            </div>
 
             <h3>Skills</h3>
-            <ul>
-                <li>HTML, CSS, JavaScript</li>
-                <li>SQL</li>
-            </ul>
+            <div class="skills-container">
+                <div class="skill-category">
+                    <h4>Front-End</h4>
+                    <ul>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>JavaScript</li>
+                    </ul>
+                </div>
+                <div class="skill-category">
+                    <h4>Back-End</h4>
+                    <ul>
+                        <li>SQL</li>
+                    </ul>
+                </div>
+                <div class="skill-category">
+                    <h4>Tools & Technologies</h4>
+                    <ul>
+                        <li>Git</li>
+                        <li>GitHub</li>
+                        <li>VS Code</li>
+                    </ul>
+                </div>
+            </div>
 
             <h3>Certifications</h3>
             <ul>
@@ -73,21 +108,21 @@
             <h2>Projects</h2>
             <div class="projects-grid">
                 <div class="project-card">
-                    <img src="project1.png" alt="Basic Calculator" />
+                    <img src="project1.png" alt="Basic Calculator" style="width: 300px; height: 200px; object-fit: cover;">
                     <h3><a href="https://github.com/I-SatyamPrashar/Basic-Calculator" target="_blank">Basic Calculator</a></h3>
                     <p>A simple web-based calculator built using HTML, CSS, and JavaScript.</p>
                 </div>
 
                 <div class="project-card">
-                    <img src="project2.jpg" alt="Memory Card Game" />
+                    <img src="project2.jpg" alt="Memory Card Game" style="width: 300px; height: 200px; object-fit: cover;">
                     <h3><a href="https://github.com/I-SatyamPrashar/Memory-Card-Game" target="_blank">Memory Card Game</a></h3>
                     <p>A fun memory card matching game to test your memory skills.</p>
                 </div>
 
                 <div class="project-card">
-                    <img src="project3.jpg" alt="Weather App" />
+                    <img src="project3.jpg" alt="Weather App" style="width: 300px; height: 200px; object-fit: cover;">
                     <h3><a href="https://github.com/I-SatyamPrashar/Weather-App" target="_blank">Weather App</a></h3>
-                    <p>A weather forecasting app that displays current weather using an API.</p>
+                    <p>A weather forecasting app that displays current weather.</p>
                 </div>
             </div>
         </div>
